--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -46,8 +46,8 @@ Imagine you are a novice cook and have to decide what meal to prepare for a firs
 Should you choose an easy favorite or attempt a new dish?
 The familiar recipe can ensure a good meal, but the new recipe could be even more delicions, although it has a higher chance of failure. In this type of *explore-exploit* dilemma [@sutton1998], you can either *explore* the new recipe that might result in a more delicious dish (*learning* goal), or *exploit* your previous experience and knowledge to ensure a good meal (*performance* goal). Here, we explore the idea that social factors shape the goals we consider by formalizing the learning-performance goal tradeoff using a simple active learning context.
 
-Active learning occurs when people have control over the sequence of information in a learning context (e.g., press buttons on a toy, one by one, to see their effect). The key assumption of this framework is that learners maximize the utility of their actions by gathering information that is especially helpful for their own learning. 
-Empirical work in education [@grabinger1995rich], machine learning [@settles2012active], and cognitive psychology [@castro2009human] suggests that active contexts lead to faster learning than passive contexts where people do not have control over the information flow. 
+Active learners have control over the sequence of information during learning (e.g., press buttons on a toy, one by one, to see their effect). One key assumption of active learning is that people maximize the utility of their actions by gathering information that is especially helpful for their learning. 
+Empirical work in education [@grabinger1995rich] and cognitive psychology [@castro2009human] suggests that active contexts lead to faster learning than passive contexts where people do not have control over the flow of information. 
 
 Real-world learning, however, usually takes place in rich social contexts 
 with teachers, peers, or others who can directly influence our learning. 
@@ -62,14 +62,14 @@ How can active learning models accommodate this richer set of utilities?
 As a step towards answering this question, we model a learner who considers a mixture of learning and performance goals. 
 A key assumption underlying recent Bayesian models of human social cognition is that 
 people expect others to act approximately optimally given a utility function [e.g., @goodman2016; @jara2016]. 
-Our model adopts this utility-theoretic approach, and assumes an agent who reasons about the utility function that represents a weighted combination of multiple goals [@yoon2017] in a social active learning context.^[Such models are commonly used to approximate group-level behavior, without the strong assumption that individuals must be strictly optimal [e.g., @frank2013throwing; @goodman2015relevant].]
+Our model adopts this utility-theoretic approach, and assumes an agent who reasons about the utility function that represents a weighted combination of multiple goals [@yoon2017] in a social active learning context.^[Such models are commonly used to approximate group-level behavior, without the strong assumption that individuals must be strictly optimal [e.g., @frank2013throwing].]
 
-```{r toy, fig.env = "figure", fig.pos = "b", fig.align='center', fig.width=2, fig.height=1.5, num.cols.cap=1, out.width='65%', fig.cap = "An example of the toy used in our paradigm."}
+```{r toy, fig.env = "figure", fig.pos = "b", fig.align='center', fig.width=1.5, fig.height=1, num.cols.cap=1, out.width='65%', fig.cap = "An example of the toy used in our paradigm."}
 img <- png::readPNG("figs/toywolabel.png")
 grid::grid.raster(img)
 ```
 
-```{r model_diagram, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Model schematic for the learner's inference. The learner considers possible hypotheses: Toy 1 (handle pull turns on the light, button press turns on music, both actions cause both effects); Toy 2 (handle pull turns on music, button press turns on the light, both actions cause both effects); and Toy 3 (both actions cause both effects, but each action on its own does not produce any effect). The learner also considers his goals. When an observer is absent, he considers his learning goal and performance goal and chooses an action. The learning goal favors a \``single\" action (e.g., pull the handle only) that can fully disambiguate, whereas the performance goal favors the \``both\" action (pull the handle AND push the button) that guarantees the most salient reward. When an observer is present, the learner considers the learning, performance (not shown), and self-presentation goal."}
+```{r model_diagram, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=4, fig.asp = 0.6, out.width= "95%", fig.align='center', fig.cap = "Model schematic for the learner's inference. The learner considers possible hypotheses: Toy 1 (handle pull turns on the light, button press turns on music, both actions cause both effects); Toy 2 (handle pull turns on music, button press turns on the light, both actions cause both effects); and Toy 3 (both actions cause both effects, but each action on its own does not produce any effect). The learner also considers his goals. When an observer is absent, he considers his learning goal and performance goal and chooses an action. The learning goal favors a \``single\" action (e.g., pull the handle only) that can fully disambiguate, whereas the performance goal favors the \``both\" action (pull the handle AND push the button) that guarantees the most salient reward. When an observer is present, the learner considers the learning, performance (not shown), and self-presentation goal."}
 img1 <- rasterGrob(as.raster(readPNG(here(image_path, "model-obsAbs.png"))), 
                     interpolate = FALSE)
 
@@ -84,12 +84,12 @@ examine how people choose actions that support learning vs. performance goals in
 We present a toy with an ambiguous causal mechanism (Fig.\ \ref{fig:toy}). 
 For this toy, doing only one of the two possible actions (handle pull or button press) disambiguates its causal mechanism but potentially risks no immediate effect (i.e., neither sound nor light turning on),
 while doing both actions at the same time is immediately rewarding (both music and light on) but is not informative for learning the toy's causal mechanism. 
-Thus, the learner can choose between the two actions
-that will each lead to either a new discovery (exploration; learning) or an immediate reward (exploitation; performance).
-The learner's action rests on relative utilities he assigns to learning versus performance, 
-which in turn are determined in part by the social context (e.g., the presence or absence of his boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.} 
+Thus, the learner can pick an action
+that leads to a new discovery (exploration; learning) or an immediate reward (exploitation; performance).
+The learner's decision depends on the relative utilities he assigns to learning versus performance, 
+which in turn are shaped by the social context (e.g., the presence or absence of his boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.} 
 
-In two experiments, we show that emphasizing performance or self-presentation (social) goals leads to actions that are not informative and thus reduces the chances of learning (Exp.\ 1). Next, we show that the mere presence of an observer (i.e., a boss) pushes learners to consider performance/presentation-oriented actions even when the learning goal is highlighted (Exp.\ 2). Finally, we show that the empirical results are consistent with predictions of our cognitive model of social-active learning.
+In two experiments, we show that emphasizing performance or self-presentation goals leads to actions that are uninformative and reduces the chances of learning (Exp.\ 1). Next, we show that the presence of an observer pushes learners to consider performance/presentation actions even when a learning goal is emphasized (Exp.\ 2). Finally, we show that the empirical results are consistent with predictions of our cognitive model of social-active learning.
 
 # Computational model
 
@@ -213,7 +213,7 @@ ms_act_e1 <- d_models$action_logit_samples_e1 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 2) 
 ```
 
-We modeled action decisions (informative "single" vs. rewarding "both" action) using a logistic regression \texttt{$action \sim goal\_condition$} with the No-goal condition as the reference category.\footnote{In all of the analyses for Exp.\ 1 and Exp.\ 2, we used the {\fontfamily{qcr}\selectfont rstanarm} package to fit Bayesian regression models estimating the differences across conditions. We report the uncertainty in our point estimates using 95\% Highest Density Intervals (HDI). The HDI provides a range of credible values given the data and model. Also, we combined the two action choices  -- button press or handle pull, each on its own -- into one "single" action in our analysis, as both of those action choices are fully informative and do not differ in their salience as suggested by judgments in a separate prior elicitation task.} Participants' tendency to select a "single" action varied across conditions as predicted (Fig.\ \ref{fig:e1_behav_results_plot}A), with the highest proportion in the Learning condition^[Note that the "single" action choices did not go above the chance level of 66.7% in any of the conditions, including the Learning condition. One possible reaon is the relative salience of the "both" action choice, given the single-attempt decision-making context, where participants may have drawn to observing the immediate rewarding effect.], followed by No-goal, Performance, and Presentation. 
+We modeled action decisions (informative "single" vs. rewarding "both" action) using a logistic regression \texttt{$action \sim goal\_condition$} with the No-goal condition as the reference category.\footnote{In all analyses, we fit Bayesian regressions to estimate condition differences. We report uncertainty using 95\% Highest Density Intervals (HDI), which provide a range of plausible condition differences. We combined the two single action choices -- button press or handle pull -- into one "single" action in our analysis, as both of those choices are fully informative and do not differ in their salience as suggested by judgments in a separate prior elicitation task.} Participants' tendency to select a "single" action varied across conditions as predicted (Fig.\ \ref{fig:e1_behav_results_plot}A), with the highest proportion in the Learning condition^[Note that the proportion of "single" action choices did not exceed 66.7% in any condition, including the Learning context. This suggests that "both" action choice might have been especially salient in our one-shot decision task since participants may have been drawn to the immediate rewarding effect.], followed by No-goal, Performance, and Presentation. 
 
 Compared to the No-goal condition, participants selected the single action at a greater rate in the Learning condition ($\beta$ = `r e1_contrasts_act$prop[1]`, [`r e1_contrasts_act$hdi_lower[1]`, `r e1_contrasts_act$hdi_upper[1]`]) and at lower rate in the Presentation context ($\beta$ = `r e1_contrasts_act$prop[4]`, [`r e1_contrasts_act$hdi_lower[4]`, `r e1_contrasts_act$hdi_upper[4]`]), with the null value of zero difference condition falling well outside the 95% HDI, and at similar rate in the Performance condition ($\beta$ = `r e1_contrasts_act$prop[3]`, [`r e1_contrasts_act$hdi_lower[3]`, `r e1_contrasts_act$hdi_upper[3]`]) with the 95% HDI including the null.
 
@@ -537,20 +537,17 @@ The fitted model predictions of action choices are shown in Fig.\ \ref{fig:e2_re
 
 # General Discussion
 
-How do social contexts shape active learning? We proposed that people integrate informational vs. social goals when deciding what to do. In two experiments, we showed that people chose more informative actions when learning goals were highlighted and in the absence of a relevant social context (no boss present), while they chose more immediately rewarding actions when performance/presentational goals were highlighted, especially when a boss was present. When no goal was specified, people's behavior seemed to reflect a mixture of goals. Our model of social-active learning successfully captured key patterns in the people's action decisions.  
+How do social contexts shape active learning? We proposed that people integrate informational and social goals when deciding what to do. In two experiments, we showed that people chose more informative actions when learning goals were highlighted and in the absence of a relevant social context (no boss present), while they chose more immediately rewarding actions when performance/presentational goals were highlighted, especially when a boss was present. When no goal was specified, people's behavior seemed to reflect a mixture of goals. Our model of social-active learning successfully captured key patterns in people's action decisions.  
 
-This work begins to bring active learning accounts into contact with social learning theories. We used ideas from Optimal Experiment Design, which models active learning as a process of rational choice to maximize information gain, and Rational Speech Act models, which formalize recursive social reasoning within a Bayesian framework. We included social information within a formal utility-theoretic framework, building a richer utility function that represented a weighted combination of multiple goals -- informational and social. 
+This work begins to bring active learning accounts into contact with social learning theories. We used ideas from Optimal Experiment Design, which models active learning as a process of rational choice to maximize information gain, and Rational Speech Act models, which formalize recursive social reasoning within a Bayesian framework. We included social information within a formal utility-theoretic framework, building a richer utility function that represented a weighted combination of informational and social goals. 
 
-There are limitations to this work that present opportunities for future work. 
-First, we did not differentiate between performance and presentation goals, since the choice of doing both actions satisfies both of these goals in our paradigm. Enriching the space of possible actions could tease apart actions driven by self-presentation,
-especially when optimal actions for demonstrating your competence and knowledge may be different from actions to produce immediately rewarding outcomes. 
-Second, we used a particular social context (the presence of a boss) to emphasize presentational goals. Our model can be extended to explain a richer set of social considerations, such as other kinds of observers (e.g., a teacher who wants the learner to select actions that help her learn). 
-Third, we limited people to a single action choice. While this allowed a clean measurement of our condition manipulations, real-world learning often involves sequential decision-making [@rafferty2011faster, @ho2016showing] that could cause learners to prioritize different goals depending on their prior actions or the probability of interacting with an observer in the future.
+There are limitations to this research that present opportunities for future work. 
+First, we did not differentiate between performance and presentation goals, since the choice of performing both actions satisfies each of these goals in our task. Enriching the space of possible actions could tease apart actions driven by self-presentation,
+especially when the optimal action for demonstrating your competence may be different from the action to produce immediately rewarding outcomes. 
+Second, we used a particular social context (the presence of a boss) to emphasize presentational goals. Our model can be extended to explain a richer set of social considerations, such as other kinds of observers such as a teacher who wants the learner to select actions that facilitate learning.
+Third, we limited people to a single action choice. While this allowed for a clean measurement of differecnes across conditions, real-world learning often involves sequential decision-making [@rafferty2011faster; @ho2016showing] that could cause learners to prioritize different goals depending on their prior actions or the probability of interacting with an observer in the future.
 
-Another interesting open question is how our model could be used to understand active learning over development. Our framework could allow us to measure changes in children's goal preferences as they develop better social reasoning and meta-cognitive abilities. One prediction is that young children focus on learning goals earlier on when they are surrounded by familiar caregivers who scaffold learning-relevant actions. But as their social reasoning abilities mature and their social environments become more complex, children may start to emphasize performance or presentation goals.
-
-Overall, this work represents a first step to answering these rich questions that 
-ultimately seek to unify theories on active learning and social reasoning.
+Another interesting open question is how our model could be used to understand change in active learning over development. Our framework could allow us to measure children's developing goal preferences as they gain better social reasoning and meta-cognitive abilities. One prediction is that young children focus on learning goals earlier on when they are surrounded by familiar caregivers who scaffold learning-relevant actions. But as their social reasoning abilities mature and their social environments become more complex, children may start to emphasize performance or presentation goals. Overall, this work represents a first step to answering these rich questions that ultimately seek to unify theories on active learning and social reasoning.
 
 \vspace{1em} \fbox{\parbox[b][][c]{7.3cm}{\centering All experiments, data, model, and analysis codes are available in the public repository for the project: \url{https://github.com/kemacdonald/soc-info}}} \vspace{1em}
 \noindent
