--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -279,3 +279,11 @@
   number={36},
   year={2014}
 }
+
+@inproceedings{ho2016showing,
+  title={Showing versus doing: Teaching by demonstration},
+  author={Ho, Mark K and Littman, Michael and MacGlashan, James and Cushman, Fiery and Austerweil, Joseph L},
+  booktitle={Advances In Neural Information Processing Systems},
+  pages={3027--3035},
+  year={2016}
+}
